# trajectory_ws

./: README.md
install/: local_setup.sh  setup.sh
install/trajectory_control/lib/trajectory_control/: spawn_obstacle.py  waypoint_publisher.py
install/trajectory_control/share/ament_index/resource_index/package_run_dependencies/: trajectory_control
install/trajectory_control/share/ament_index/resource_index/parent_prefix_path/: trajectory_control
install/trajectory_control/share/trajectory_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/trajectory_control/share/trajectory_control/cmake/: trajectory_controlConfig.cmake
install/trajectory_control/share/trajectory_control/config/: trajectory_control.rviz
install/trajectory_control/share/trajectory_control/launch/: trajectory_controller.launch.py
log/: latest_build
src/trajectory_control/: CMakeLists.txt
src/trajectory_control/config/: controller_params.yaml
src/trajectory_control/src/: trajectory_controller_node.cpp
src/trajectory_control/test/: test_controller.cpp
